--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,35 +18,10 @@ android {
     lintOptions {
         abortOnError false
     }
-    signingConfigs {
-        release {
-            storeFile file (STORE_FILE)
-            storePassword STORE_PASSWORD
-            keyAlias KEY_ALIAS
-            keyPassword KEY_PASSWORD
-        }
-    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
-
-            applicationVariants.all { variant ->
-                variant.outputs.each { output ->
-                    def outputFile = output.outputFile
-                    String outputDir = outputFile.parent
-
-                    if (project.hasProperty('OUTPUT_DIR') && new File((String) OUTPUT_DIR).exists())
-                        outputDir = OUTPUT_DIR
-
-                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                        // alter this string to change output file name
-                        def fileName = "CalcLab-" + defaultConfig.versionName + ".apk"
-                        output.outputFile = new File(outputDir, fileName)
-                    }
-                }
-            }
         }
     }
 }
@@ -64,8 +39,9 @@ tasks.withType(Test) {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.squareup:otto:1.3.7'
 
     testCompile 'junit:junit:4.12'
     testCompile('org.robolectric:robolectric:3.0-SNAPSHOT') {
